--- a/AndroidAPP/DotbotAndroid_v1/app/src/main/AndroidManifest.xml
+++ b/AndroidAPP/DotbotAndroid_v1/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tmc.dotbotandroid_v1">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_logo"
