First draft of new structure: - able to read sensor signals, calculate them via calculator and store them in the cache. - able to display gui activity

--- a/AndroidAPP/DotbotAndroid_v1/app/src/main/AndroidManifest.xml
+++ b/AndroidAPP/DotbotAndroid_v1/app/src/main/AndroidManifest.xml
@@ -18,10 +18,18 @@
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".GUI"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.GUI" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
